[package]
name = "mercator_db"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Database model for mercator."
#homepage = "https://crates.io/crates/mercator_db"
repository = "https://github.com/epfl-dias/mercator_db"
readme = "README.md"

keywords = []
categories = ["database-implementations", "data-structures"]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

[lib]
name = "mercator_db"
path = "src/lib.rs"

[[bin]]
name = "db-test"
path = "src/main.rs"

[dependencies]
ironsea_index = "^0.1"
ironsea_index_sfc_dbc = "^0.1"
ironsea_index_hashmap = "^0.1"
ironsea_table = "^0.1"
ironsea_table_vector = "^0.1"

memmap = "^0.7"
lazy_static = "^1.3"
arrayref = "^0.3" # For Positions Objects

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
bincode = "^1.1"

# Used for main.rs as integration test
measure_time = "^0.6" # To mesure parsing time, only required by binary

# Logging macros API
#log = { version = "^0.4", features = ["max_level_trace", "release_max_level_info"] }
log = { version = "^0.4", features = ["max_level_trace", "release_max_level_trace"] }
pretty_env_logger = "^0.3"       # Logger implementation
